# novelty-wealth-news-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: news-digest.yml
config/: keywords.yml  sources.yml
src/: dedupe.py  filtering.py  main.py  models.py  rss_fetcher.py  slack.py  summarizer.py  utils.py
tests/: test_dedupe.py  test_filtering.py
